v2.2.0 守护系统（AI主动看护）、联网搜索与网页抓取、玩家自定义监听、对话推荐、LLM预算治理
✨ 新增功能
- 守护系统（Guardian）：AI主动看护——背包快满/装备耐久告急/视野外怪物锁定三类场景主动提醒，LLM现场生成文案，背包界面自动静音，挂机自动暂停
- 联网搜索（WebSearch）：9家搜索引擎供应商，中英文自动路由，支持时间范围筛选与多步搜索
- 网页抓取（WebFetch）：零配置开箱即用，三重SSRF安全防护（内网拦截/防DNS重绑定/强制HTTPS+逐跳重定向复检+响应体硬上限）
- 玩家自定义监听（WatchSkill）：条件监听（轮询型）+事件监听（11种事件型），触发仅通知AI不自动执行，5分钟掉线窗口自动恢复
- 跨玩家上下线订阅（PlayerWatchSkill）：多目标订阅防乱序，订阅者下线自动清空
- 对话推荐（Suggestion）：命令模式触发，宁缺毋滥，玩家可opt-out关闭
- LLM预算治理：二元熔断——主动请求永不熔断，被动调用统一限流，200次/小时默认阈值

🔧 优化
- 问候系统配置合并为单文件双语，问候写入对话历史，软推荐守护，告警提示词加固
- 画像分析与守护系统协同：守护交互纳入分析上下文但不虚抬触发频率
- 数据库表前缀安全校验（防SQL注入），当前时间注入AI上下文（精确到分钟）
- /kila doctor自检新增监听/推荐/WebSearch/WebFetch四项检查
- /kila reload支持重载守护/监听/Web/推荐/预算配置

🐛 修复
- bStats技能注册表防fork劫持（官方源优先）
- 实体名国际化（26种）+历史错别字修正（凋灵/蠹虫）
- 英文i18n配置文件YAML语法修复
- 原版API执行器无状态化加固（防御性代码规范化）

⚠️ 兼容性
- 移除AFK挂机任务系统（能力由守护/监听/跨玩家订阅三个新系统替代）
- 新增权限节点：kilacraft.guardian/watch/player_watch/websearch/webfetch
- 移除权限节点：kilacraft.afk
- 配置文件变更：intent_prompts(务必删)、greeting(务必删)、output(新增)、language(建议删)等
- AFK相关文档同步归档至doc/归档/